# structural-revit-viktor-agent

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt  viktor.config.toml
app/: aec.py  controller.py  tools.py
app/data/: analytical_model.json
app/sap_revit_tools/: run_sap2000_model.py  run_sap2000_model_comptyes.py  tool_reference.py  tool_reference_comptypes.py
app/sap_tools/: __init__.py  check_sap2000_instance_tool.py  core.py  display_reaction_loads_table.py  display_support_coords_table.py  get_load_combinations_tool.py  get_reaction_loads_tool.py  get_support_coordinates_tool.py  test_tools.py
app/viktor_tools/: acc_workitem_polling_tool.py  analytical_model_json_tool.py  api_types.py  autodesk_context_tool.py  autodesk_view_tool.py  base.py  footing_acc_automation_tool.py  footing_concrete_rebar_tool.py  footing_design_tool.py  footing_sizing_tool.py  pile_acc_automation_tool.py  pile_axial_capacity_tool.py  plot_footings_tool.py  plotting_tool.py  table_tool.py
app/workflow_graph/: example_workflow.py  models.py  state.py  styles.css  viewer.py  workflow.js  workflow.json
docs/: viktor-storage-tableview-guide.md
test/: __init__.py  agent_run.py  example_composed_workflow.py  test_footing_design_sap2000_integration.py  test_workflow_graph_plan.py  viktor_tool_test.py
